--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@
 .env
 .env.local
 .env.*.local
+*.key
+*.pem
+credentials.json
 
 # Logs
 logs/
@@ -22,25 +25,77 @@ logs/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# Dependency directories (if you add them later)
+# Dependency directories
 node_modules/
+jspm_packages/
+bower_components/
+
+# Python
 venv/
 env/
+ENV/
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
+*.so
 .Python
+*.egg-info/
+.eggs/
+pip-log.txt
+pip-delete-this-directory.txt
+.pytest_cache/
+.coverage
+htmlcov/
 
-# Build outputs (if applicable)
+# Ruby
+*.gem
+*.rbc
+.bundle/
+vendor/bundle/
+
+# Go
+*.exe
+*.test
+*.out
+go.work
+
+# Rust
+target/
+Cargo.lock
+
+# Build outputs
 dist/
 build/
-*.egg-info/
+out/
+*.wasm
+
+# Package manager lock files (optional - uncomment if you want to ignore them)
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
+# Gemfile.lock
+# Cargo.lock
 
 # OS files
 Thumbs.db
 .DS_Store
+desktop.ini
 
 # Temporary files
 tmp/
 temp/
 *.tmp
+*.bak
+*.backup
+
+# Coverage and test reports
+coverage/
+.nyc_output/
+test-results/
+
+# IDE specific
+.vscode/settings.json
+.idea/workspace.xml
+*.sublime-workspace
